# flower

examples/advanced-pytorch/: clientapp.Dockerfile  pyproject.toml  serverapp.Dockerfile
examples/advanced-pytorch/pytorch_example/: server_app.py  strategy.py
examples/fedrag/data/: download.py
examples/quickstart-huggingface/huggingface_example/: client_app.py  server_app.py
examples/quickstart-pytorch/: pyproject.toml
